--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -675,32 +675,18 @@ a:hover{
 }
 
 
-.clearfix:after {
-     visibility: hidden;
-     display: block;
-     font-size: 0;
-     content: " ";
-     clear: both;
-     height: 0;
-     }
-.clearfix { display: inline-block; }
-/* start commented backslash hack \*/
-* html .clearfix { height: 1%; }
-.clearfix { display: block; }
-/* close commented backslash hack */
-
-///* full clearfix */
-//  /* add to floating elements which shall clear floating after themselves */ 
-//* html .clearfix {
-//    height: 1%; /* IE5-6 */
-//    }
-//*+html .clearfix {
-//	display: inline-block; /* IE7not8 */
-//	}
-//.clearfix:after { /* FF, IE8, O, S, etc. */
-//	content: ".";
-//	display: block;
-//	height: 0;
-//	clear: both;
-//	visibility: hidden;
-//}
+/* full clearfix */
+    /* add to floating elements which shall clear floating after themselves */ 
+	* html .clearfix {
+	    height: 1%; /* IE5-6 */
+	    }
+	*+html .clearfix {
+		display: inline-block; /* IE7not8 */
+		}
+	.clearfix:after { /* FF, IE8, O, S, etc. */
+	    content: ".";
+	    display: block;
+	    height: 0;
+	    clear: both;
+	    visibility: hidden;
+	    }
