--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -31,7 +31,7 @@
   .company-image-box
     .borders.fixed-height.clearfix
       = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
-      .tlf-box
+      .tlf-box.clearfix
         'T: 
         = @company.phone 
         '&nbsp;|&nbsp;
