--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -326,14 +326,14 @@ $ninesixty-gutter-width: 20px; // default: 20px
 
 .company-image-box{
 	
-	position:relative;
+/*	position:relative;*/
 	background-color:#fff;
   margin-top:36px;
 	@include grid(6);
 	min-height:376px;
 	display:block;
 	overflow:hidden;
-	text-align:right;
+
 	.borders{
 		border-style:solid;
 		border-width:1px;
@@ -341,7 +341,22 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		display:block;
 		overflow:hidden;
 	}
-
+	
+	.company{
+		height:340px;
+		display:block;
+	/*	overflow:hidden; */
+	}
+	.info-box{
+		
+		min-height:40px;
+		min-width:40px;
+		@include opacity(0.8);
+		background-color:#ddd;
+		text-align:right;
+		padding:8px;
+	}
+/*
 	.tlf-box{
 		@include opacity(0.8);
 		background-color:#ddd;
@@ -357,6 +372,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 			text-transform: uppercase;
 		}
 	}
+	*/
 }
 
 
