--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -30,8 +30,9 @@
         
   .company-image-box
     .borders.fixed-height.clearfix
-      = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
-      .tlf-box.clearfix
+      .company
+        = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
+      .info-box
         'T: 
         = @company.phone 
         '&nbsp;|&nbsp;
