--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -189,7 +189,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	background-repeat:no-repeat;
 	width:400px;
 	height:51px;
-	position:relative;
+/*	position:relative;*/
 	left:-14px;
 	top:20px;
 	color:#fff;
@@ -221,7 +221,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 
 .content{
 	margin: 20px;
-	position:relative;
+	/*position:relative;*/
 	.content-company{
 		height:280px;
 		.pagination {
@@ -292,7 +292,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 
 .squared-box{
 	
-	position:relative;
+/*	position:relative;*/
 	background-color:#fff;
     margin-top:36px;
 	@include grid(6);
@@ -396,15 +396,15 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	width:940px;
 	display:block;
 	float:left;
-	position:relative;
+/*	position:relative;
 	clear: both;
-
+*/
 	.borders{
 		border-style:solid;
 		border-width:1px;
 		height:184px;
-		position:relative;
-		clear: both;
+/*		position:relative;
+		clear: both;*/
 
 	}
 	.left-side{
@@ -413,8 +413,8 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		@include grid(3);
 		@include alpha;
 		width:168px;
-		position:relative;
-		clear: both;
+/*		position:relative;
+		clear: both;*/
 		.menu-box{
 			width:154px;
 			height:51px;
