--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -471,7 +471,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   background-repeat: no-repeat;
   width: 400px;
   height: 51px;
-  position: relative;
+  /*	position:relative;*/
   left: -14px;
   top: 20px;
   color: #fff;
@@ -508,7 +508,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /* line 222, ../../../app/assets/stylesheets/grid.scss */
 .content {
   margin: 20px;
-  position: relative;
+  /*position:relative;*/
 }
 /* line 225, ../../../app/assets/stylesheets/grid.scss */
 .content .content-company {
@@ -619,7 +619,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 /* line 293, ../../../app/assets/stylesheets/grid.scss */
 .squared-box {
-  position: relative;
+  /*	position:relative;*/
   background-color: #fff;
   margin-top: 36px;
   display: inline;
@@ -744,16 +744,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 940px;
   display: block;
   float: left;
-  position: relative;
-  clear: both;
+  /*	position:relative;
+  	clear: both;
+  */
 }
 /* line 402, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
-  position: relative;
-  clear: both;
+  /*		position:relative;
+  		clear: both;*/
 }
 /* line 410, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
@@ -765,8 +766,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 220px;
   margin-left: 0;
   width: 168px;
-  position: relative;
-  clear: both;
+  /*		position:relative;
+  		clear: both;*/
 }
 /* line 418, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
