--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -745,18 +745,18 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 940px;
   display: block;
   float: left;
-  position: relative;
-  clear: both;
+  /*	position:relative;
+  	clear: both;*/
 }
-/* line 403, ../../../app/assets/stylesheets/grid.scss */
+/* line 400, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
-  position: relative;
-  clear: both;
+  /*		position:relative;
+  		clear: both;*/
 }
-/* line 411, ../../../app/assets/stylesheets/grid.scss */
+/* line 408, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -766,24 +766,24 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 220px;
   margin-left: 0;
   width: 168px;
-  position: relative;
-  clear: both;
+  /*		position:relative;
+  		clear: both;*/
 }
-/* line 419, ../../../app/assets/stylesheets/grid.scss */
+/* line 416, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 422, ../../../app/assets/stylesheets/grid.scss */
+/* line 419, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 423, ../../../app/assets/stylesheets/grid.scss */
+/* line 420, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 426, ../../../app/assets/stylesheets/grid.scss */
+/* line 423, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -794,12 +794,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-right: 0;
   width: 730px;
 }
-/* line 432, ../../../app/assets/stylesheets/grid.scss */
+/* line 429, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 436, ../../../app/assets/stylesheets/grid.scss */
+/* line 433, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
   height: 184px;
   display: inline;
@@ -809,7 +809,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 220px;
   width: 230px;
 }
-/* line 442, ../../../app/assets/stylesheets/grid.scss */
+/* line 439, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header {
   height: 54px;
   margin-top: 10px;
@@ -822,17 +822,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-right: 0;
   width: 230px;
 }
-/* line 449, ../../../app/assets/stylesheets/grid.scss */
+/* line 446, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a {
   text-decoration: none;
   color: #000;
 }
-/* line 452, ../../../app/assets/stylesheets/grid.scss */
+/* line 449, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 459, ../../../app/assets/stylesheets/grid.scss */
+/* line 456, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -846,49 +846,49 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   width: 230px;
   font-weight: bold;
 }
-/* line 468, ../../../app/assets/stylesheets/grid.scss */
+/* line 465, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   color: #448;
 }
-/* line 471, ../../../app/assets/stylesheets/grid.scss */
+/* line 468, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 475, ../../../app/assets/stylesheets/grid.scss */
+/* line 472, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 480, ../../../app/assets/stylesheets/grid.scss */
+/* line 477, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 483, ../../../app/assets/stylesheets/grid.scss */
+/* line 480, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 490, ../../../app/assets/stylesheets/grid.scss */
+/* line 487, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 494, ../../../app/assets/stylesheets/grid.scss */
+/* line 491, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 496, ../../../app/assets/stylesheets/grid.scss */
+/* line 493, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 501, ../../../app/assets/stylesheets/grid.scss */
+/* line 498, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -898,7 +898,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   margin-left: 0;
 }
 
-/* line 506, ../../../app/assets/stylesheets/grid.scss */
+/* line 503, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -909,19 +909,19 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   padding-right: 480px;
 }
 
-/* line 513, ../../../app/assets/stylesheets/grid.scss */
+/* line 510, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 518, ../../../app/assets/stylesheets/grid.scss */
+/* line 515, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 523, ../../../app/assets/stylesheets/grid.scss */
+/* line 520, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -932,29 +932,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 528, ../../../app/assets/stylesheets/grid.scss */
+/* line 525, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 534, ../../../app/assets/stylesheets/grid.scss */
+/* line 531, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 537, ../../../app/assets/stylesheets/grid.scss */
+/* line 534, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 538, ../../../app/assets/stylesheets/grid.scss */
+/* line 535, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 542, ../../../app/assets/stylesheets/grid.scss */
+/* line 539, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -967,14 +967,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 550, ../../../app/assets/stylesheets/grid.scss */
+/* line 547, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 557, ../../../app/assets/stylesheets/grid.scss */
+/* line 554, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -984,7 +984,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 566, ../../../app/assets/stylesheets/grid.scss */
+/* line 563, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -995,7 +995,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 577, ../../../app/assets/stylesheets/grid.scss */
+/* line 574, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -1004,7 +1004,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 583, ../../../app/assets/stylesheets/grid.scss */
+/* line 580, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -1015,21 +1015,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 589, ../../../app/assets/stylesheets/grid.scss */
+/* line 586, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 598, ../../../app/assets/stylesheets/grid.scss */
+/* line 595, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 604, ../../../app/assets/stylesheets/grid.scss */
+/* line 601, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -1039,7 +1039,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 608, ../../../app/assets/stylesheets/grid.scss */
+/* line 605, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1048,7 +1048,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 612, ../../../app/assets/stylesheets/grid.scss */
+/* line 609, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1056,7 +1056,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 615, ../../../app/assets/stylesheets/grid.scss */
+/* line 612, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1064,7 +1064,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 618, ../../../app/assets/stylesheets/grid.scss */
+/* line 615, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1072,7 +1072,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 621, ../../../app/assets/stylesheets/grid.scss */
+/* line 618, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1083,19 +1083,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 628, ../../../app/assets/stylesheets/grid.scss */
+/* line 625, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 634, ../../../app/assets/stylesheets/grid.scss */
+/* line 631, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 636, ../../../app/assets/stylesheets/grid.scss */
+/* line 633, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1107,41 +1107,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 642, ../../../app/assets/stylesheets/grid.scss */
+/* line 639, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 649, ../../../app/assets/stylesheets/grid.scss */
+/* line 646, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 651, ../../../app/assets/stylesheets/grid.scss */
+/* line 648, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 654, ../../../app/assets/stylesheets/grid.scss */
+/* line 651, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 657, ../../../app/assets/stylesheets/grid.scss */
+/* line 654, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 658, ../../../app/assets/stylesheets/grid.scss */
+/* line 655, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 660, ../../../app/assets/stylesheets/grid.scss */
+/* line 657, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 665, ../../../app/assets/stylesheets/grid.scss */
+/* line 662, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1153,55 +1153,55 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 671, ../../../app/assets/stylesheets/grid.scss */
+/* line 668, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 678, ../../../app/assets/stylesheets/grid.scss */
+/* line 675, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 680, ../../../app/assets/stylesheets/grid.scss */
+/* line 677, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 683, ../../../app/assets/stylesheets/grid.scss */
+/* line 680, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 686, ../../../app/assets/stylesheets/grid.scss */
+/* line 683, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 687, ../../../app/assets/stylesheets/grid.scss */
+/* line 684, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 689, ../../../app/assets/stylesheets/grid.scss */
+/* line 686, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
 
 /* full clearfix */
 /* add to floating elements which shall clear floating after themselves */
-/* line 697, ../../../app/assets/stylesheets/grid.scss */
+/* line 694, ../../../app/assets/stylesheets/grid.scss */
 * html .clearfix {
   height: 1%;
   /* IE5-6 */
 }
 
-/* line 700, ../../../app/assets/stylesheets/grid.scss */
+/* line 697, ../../../app/assets/stylesheets/grid.scss */
 * + html .clearfix {
   display: inline-block;
   /* IE7not8 */
 }
 
-/* line 703, ../../../app/assets/stylesheets/grid.scss */
+/* line 700, ../../../app/assets/stylesheets/grid.scss */
 .clearfix:after {
   /* FF, IE8, O, S, etc. */
   content: ".";
