--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -32,7 +32,11 @@
     .borders.fixed-height
       .company
         = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
-      
+      .info-box
+        'T: 
+        = @company.phone 
+        '&nbsp;|&nbsp;
+        =raw @link
     
 
   = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
